# ev3-remote-control

./: .gitmodules  README.md
client/android/: build.gradle
client/android/app/: build.gradle
client/android/app/src/androidTest/java/org/devtcg/robotrc/: ExampleInstrumentedTest.kt
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/java/org/devtcg/robotrc/: CoapHelloWorld.kt  FullscreenActivity.kt
client/android/app/src/main/java/org/devtcg/robotrc/app/: RobotRcApplication.kt
client/android/app/src/main/java/org/devtcg/robotrc/appcontext/: AppContext.kt
client/android/app/src/main/java/org/devtcg/robotrc/concurrency/: RobotExecutors.kt
client/android/app/src/main/java/org/devtcg/robotrc/mainui/: MainActivity.kt  MainUiDeciderAgent.kt  RobotSelectionAgent.kt  WindowTreatmentAgent.kt
client/android/app/src/main/java/org/devtcg/robotrc/moshi/: MoshiBridge.kt
client/android/app/src/main/res/layout/: activity_fullscreen.xml  ev3_color_sensor.xml  ev3_default_sensor.xml  ev3_motor.xml  ev3_port.xml  ev3_proximity_sensor.xml  ev3_raw_robot_layout.xml  ev3_touch_sensor.xml  main_activity.xml  robot_chooser_fragment.xml  robot_chooser_item.xml
client/android/app/src/main/res/values/: strings.xml  styles.xml
client/android/app/src/test/java/org/devtcg/robotrc/: ExampleUnitTest.kt
client/android/gradle/wrapper/: gradle-wrapper.properties
server/: Cargo.toml  README.md
server/docker/: Dockerfile  lib.sh
server/scripts/: docker-build.sh
server/src/: anyhow_error_wrapper.rs  attributes_observable.rs  block_handler.rs  block_value.rs  coap_resource_server.rs  coap_utils.rs  device_resource.rs  devices_observable.rs  hal.rs  hal_ev3.rs  hal_mock.rs  layout_resource.rs  main.rs  time_resource.rs  uri_query_helper.rs
(+93 files in other folders)
