[package]
name = "ev3-remote-control-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap = { path = "coap-rs" }
#coap-lite = { path = "/home/jasta/software/coap-lite" }
coap-lite = "0.8.1"
tokio = "1.15.0"
log = "0.4.14"
env_logger = "0.9.0"
querystring = "1.1.0"
multimap = "0.8.3"
serde = "1.0.136"
serde_json = "1.0.78"
clap = { version = "3.1.0", features = [ "derive" ] }
ev3dev-lang-rust = "0.12.0"
ev3dev-lang-rust-derive = "0.10.0"
thiserror = "1.0.30"
lazy_static = "1.4.0"
lru_time_cache = "0.11.11"
anyhow = "1.0.54"
