[package]
name = "ev3-remote-control-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-server = { git = "https://github.com/jasta/coap-server-rs" }
coap-lite = "0.9.0"
tokio = { version = "1.18.1", default-features = false, features = ["full"] }
console-subscriber = { version = "0.1.5", optional = true }
log = "0.4.14"
env_logger = "0.9.0"
querystring = "1.1.0"
multimap = "0.8.3"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.78"
clap = { version = "3.1.0", features = [ "derive" ] }
ev3dev-lang-rust = "0.12.0"
ev3dev-lang-rust-derive = "0.10.0"
thiserror = "1.0.30"
lazy_static = "1.4.0"
lru_time_cache = "0.11.11"
anyhow = "1.0.54"
notify = { git = "https://github.com/jasta/notify" }
futures-util = "0.3.21"
sha2 = "0.10.2"
walkdir = "2.3.2"
async-trait = "0.1.53"

[dev-dependencies]
tempfile = "3.3.0"

[features]
async_debug = ["dep:console-subscriber", "tokio/tracing"]